--- a/css/index.css
+++ b/css/index.css
@@ -53,8 +53,6 @@ li {
 
 .main-navigation {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
   margin-left: 85px;
 }
 
@@ -114,12 +112,33 @@ li {
   color: #2196f3;
 }
 
+.nav1 {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+}
+
 .link-current:hover {
   color: #2196f3;
 }
 
 .link-current {
   color: #2196f3;
+}
+
+.link-current::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: #2196f3;
+  border-radius: 2px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .main-navigation .link-current {
@@ -134,7 +153,11 @@ li {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .mail li a:hover,
 .mail li a:focus {
   color: #2196f3;
@@ -144,12 +167,30 @@ li {
   width: 16px;
   height: 11px;
   margin-right: 10px;
+  fill: #757575;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mail1-icon:hover,
+.mail1-icon:focus {
+  fill: #2196f3;
 }
 
 .mail1-icon2 {
   width: 10px;
   height: 15px;
   margin-right: 10px;
+  fill: #757575;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mail1-icon2:hover,
+.mail1-icon2:focus {
+  fill: #2196f3;
 }
 
 .hero {
@@ -343,6 +384,14 @@ li {
   vertical-align: middle;
   padding-top: 30px;
   padding-bottom: 30px;
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.work-element {
+  position: relative;
 }
 
 .image-work {
@@ -449,6 +498,9 @@ li {
   height: 44px;
   border-radius: 50%;
   fill: #afb1b8;
+  transition-property: background-color, fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comapanies {
@@ -473,6 +525,9 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition-property: border, border-radius;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .comapanies-example:hover,
@@ -490,12 +545,18 @@ li {
   width: 50px;
   height: 50px;
   fill: #afb1b8;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-companies2 {
   width: 70px;
   height: 50px;
   fill: #afb1b8;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-companies:hover,
@@ -543,6 +604,9 @@ li {
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.1);
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-element-url:hover,
