--- a/css/index.css
+++ b/css/index.css
@@ -75,6 +75,9 @@ li {
 .icon-flex {
   display: flex;
   align-items: center;
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .accent {
@@ -158,10 +161,10 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail li a:hover,
+/* .mail li a:hover,
 .mail li a:focus {
   color: #2196f3;
-}
+} */
 
 .mail1-icon {
   width: 16px;
@@ -173,10 +176,10 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail1-icon:hover,
+/* .mail1-icon:hover,
 .mail1-icon:focus {
   fill: #2196f3;
-}
+} */
 
 .mail1-icon2 {
   width: 10px;
@@ -188,9 +191,23 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mail1-icon2:hover,
+/* .mail1-icon2:hover,
 .mail1-icon2:focus {
   fill: #2196f3;
+} */
+
+.icon-flex:hover,
+.icon-flex:focus {
+  fill: #2196f3;
+  color: #2196f3;
+}
+
+.mail1-icon {
+  fill: currentColor;
+}
+
+.mail1-icon2 {
+  fill: currentColor;
 }
 
 .hero {
@@ -379,11 +396,10 @@ li {
   text-decoration: none;
   text-align: center;
   width: 370px;
-  height: 70px;
   margin: 0px;
   vertical-align: middle;
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 27px;
+  padding-bottom: 27px;
 
   position: absolute;
   left: 0;
@@ -512,7 +528,7 @@ li {
   margin-left: 30px;
 }
 
-.comapanies-example {
+.companies-hover {
   display: inline-block;
   width: 170px;
   height: 90px;
@@ -528,12 +544,14 @@ li {
   transition-property: border, border-radius;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #afb1b8;
 }
 
-.comapanies-example:hover,
-.comapanies-example:focus {
+.companies-hover:hover,
+.companies-hover:focus {
   border: 1px solid #2196f3;
   border-radius: 4px;
+  fill: #2196f3;
 }
 
 .clients {
@@ -544,7 +562,6 @@ li {
 .icon-companies {
   width: 50px;
   height: 50px;
-  fill: #afb1b8;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -553,20 +570,9 @@ li {
 .icon-companies2 {
   width: 70px;
   height: 50px;
-  fill: #afb1b8;
   transition-property: fill;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon-companies:hover,
-.icon-companies:focus {
-  fill: #2196f3;
-}
-
-.icon-companies2:hover,
-.icon-companies2:focus {
-  fill: #2196f3;
 }
 
 .flex-footer {
